--- a/bfd.qmd
+++ b/bfd.qmd
@@ -8,6 +8,8 @@ editor: visual
 -   BFD is a lightweight *(small fixed packets)* protocol used to determine a link failure between L3 non-directly connected routers.
 
     -   Sub Second failure
+    -   Independent of Media Type, Encapsulation, Topology & Routing Protocol.
+    -   Runs on Hardware, not CPU
     -   1 session per address family per interface (regardless of how many protocols run on it).
     -   Supports OSPF, EIGRP, BGP, IS-IS
     -   Not Compatible with
@@ -29,4 +31,14 @@ editor: visual
 
     -   IP Routing protocol supported by BFD must be configured before BFD is configured
 
-    -   Control packets sent on UDP port 3784
+    -   **Control packets sent on UDP port 3784**
+
+### Standard Configuration
+
+``` default
+interface g0/1
+  bfd interval 50 min_rx 50 multiplier 3
+  
+router osfp 1
+  bfd all-interfaces
+```
